--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ World_Indicators/Footnotes.csv
 World_Indicators/hashes.txt
 World_Indicators/Indicators.csv
 Stack/survey_results_public.csv
+Crime/terror.csv
