--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ World_Indicators/hashes.txt
 World_Indicators/Indicators.csv
 Stack/survey_results_public.csv
 Crime/terror.csv
+Kiva/kiva_loans.csv
+Kiva/kiva_mpi_region_locations.csv
+Kiva/loan_themes_by_region.csv
+Kiva/loan_theme_ids.csv
